--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "complex-components",
+  "name": "compound-components",
   "dependencies": {
     "ember": "~2.4.1",
     "ember-cli-shims": "0.1.0",
